--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "mocha",
     "start": "node ./server/app"
   },
   "dependencies": {
@@ -10,12 +11,12 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "mocha": "^2.3.1",
     "mongoose": "^4.1.5",
     "morgan": "~1.6.1"
   },
   "devDependencies": {
     "chai": "^3.2.0",
-    "chai-http": "^1.0.0",
-    "install": "^0.11.0"
+    "chai-http": "^1.0.0"
   }
 }
